# lx06-flash-tool

./: .gitignore  ARCHITECTURE.md  FIX_SUMMARY.md  README.md  TESTING.md  TEST_RESULTS.md  install.sh  pyproject.toml  pytest.ini  test.sh
lx06_tool/: __init__.py  app.py  config.py  constants.py  exceptions.py  state.py
lx06_tool/modules/: __init__.py  ai_brain.py  backup.py  bootloader.py  debloat.py  docker_builder.py  environment.py  firmware.py  flasher.py  media_suite.py  usb_scanner.py
lx06_tool/ui/: __init__.py  widgets.py
lx06_tool/ui/screens/: __init__.py  backup.py  backup_flash.py  build.py  complete.py  customize.py  environment.py  flash.py  usb_connect.py  welcome.py
lx06_tool/ui/widgets/: __init__.py  copy_log.py  debug_log.py
lx06_tool/utils/: __init__.py  amlogic.py  checksum.py  compat.py  debug_log.py  docker_utils.py  downloader.py  logger.py  runner.py  squashfs.py  sudo.py  usb_monitor.py  validation.py
resources/configs/: librespot.toml.j2  shairport-sync.conf.j2  upmpdcli.conf.j2  xiao_config.yaml.j2
resources/docker/: Dockerfile.firmware-builder
resources/scripts/: dump_partitions.sh  unlock_bootloader.sh
resources/udev/: 70-persistent-usb-ubuntu14.rules
tests/: conftest.py
tests/unit/: test_checksum.py  test_validation.py
