[build-system]
requires = ["setuptools>=68.0"]
# Removed setuptools-scm — no git tags exist; dynamic versioning would break fresh clones.
build-backend = "setuptools.build_meta"

[project]
name = "lx06-flash-tool"
version = "0.1.0"
description = "All-in-One tool to manage, customize, and flash the Xiaomi LX06 (Xiaoai Speaker Pro)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "LX06 Flash Tool Contributors"},
]
keywords = ["xiaomi", "lx06", "firmware", "flash", "amlogic", "smart-speaker"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Hardware :: Hardware Drivers",
]

dependencies = [
    "textual>=0.47.0",       # Minimum version with stable Screen.dismiss()
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "docker>=7.0.0",         # Python Docker SDK v7 removed deprecated APIs
    "jinja2>=3.1.3",
    "httpx>=0.27.0",
    "aiofiles>=23.2.1",
    "platformdirs>=4.2.0",   # XDG-compliant config/data/cache paths (new dep)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "textual-dev>=0.47.0",
    "mypy>=1.9",
    "ruff>=0.4",
    "types-PyYAML>=6.0",
    "types-aiofiles>=23.2",
]

[project.scripts]
lx06-tool = "lx06_tool.app:main"

[tool.setuptools.packages.find]
include = ["lx06_tool*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = [
    "N818",   # Exception names don't need to end in 'Error' everywhere
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
